Fade out list on click

--- a/public/index.css
+++ b/public/index.css
@@ -39,4 +39,9 @@
   -webkit-animation-duration:1s;
   -moz-animation-duration:1s;
   animation-duration:1s;
+  display: none;
+}
+
+.hidden {
+  display: none;
 }
